--- a/gauche.css
+++ b/gauche.css
@@ -4,10 +4,20 @@
   padding: 0;
 }
 
+/*PAGE SECTIONS*/
 body {
   color: #444;
   font-family: sans-serif;
   border-top: 10px solid #1098ad;
+  position: relative;
+}
+
+.container {
+  width: 800px;
+  /*margin-left: auto;
+  margin-right: auto;*/
+  margin: 0 auto;
+  position: relative;
 }
 
 .main-header {
@@ -37,6 +47,7 @@ aside {
   width: 500px;
 }
 
+/*SMALLER ELEMENTS*/
 h1,
 h2,
 h3 {
@@ -47,6 +58,11 @@ h1 {
   font-size: 26px;
   text-transform: capitalize;
   font-style: oblique;
+}
+
+h1::first-letter {
+  font-style: normal;
+  margin: 5px;
 }
 
 h2 {
@@ -81,6 +97,7 @@ ol {
 li {
   font-size: 20px;
   margin-bottom: 10px;
+  /*display: inline;*/
 }
 
 li:last-child {
@@ -155,6 +172,34 @@ a:active {
   font-style: italic;
 }
 /* LVHA */
+
+nav a:link {
+  /*background-color: blue;
+  margin: 20px;
+  padding: 20px;
+
+  display: block;*/
+
+  margin-right: 30px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+
+  position: absolute;
+  /*top: 0;
+  left: 0;*/
+  bottom: 80px;
+  right: 50px;
+}
 
 /*Floats*/
 /*.author-img {
